--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -9,6 +9,7 @@
         <h1>Welcome to My First Portfolio</h1>
     </header>
     <main>
+        <a href="tweets.html">Tweets</a>
         <section>
             <h2>About Me</h2>
             <p>This is a brief introduction about myself.</p>
