--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,41 +6,49 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My First Portfolio</h1>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
     </header>
     <main>
-        <a href="tweets.html">Tweets</a>
-        <section>
-            <h2>About Me</h2>
-            <p>This is a brief introduction about myself.</p>
-        </section>
-        <section>
-            <h2>Projects</h2>
-            <ul>
-                <li>Project 1</li>
-                <li>Project 2</li>
-            </ul>
-        </section>
-        <section>
-            <h2>Additional Information</h2>
-            <h3>My Journey</h3>
-            <p>I started my journey in web development with a passion for creating interactive and user-friendly websites.</p>
-            <h3>Skills</h3>
-            <p>Over the years, I have developed skills in HTML, CSS, JavaScript, and other web technologies.</p>
-            <h3>Goals</h3>
-            <p>My goal is to become a full-stack developer and contribute to impactful projects.</p>
-            <h3>Hobbies</h3>
-            <p>In my free time, I enjoy coding, reading tech blogs, and exploring new tools and frameworks.</p>
-        </section>
-        <section>
-            <h2>Clickable Image</h2>
-            <a href="https://www.alxafrica.com/" target="_blank">
-                <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" style="width:200px;">
-            </a>
-        </section>
+        <article>
+            <h1>Welcome to My First Portfolio</h1>
+            <section>
+                <h2>About Me</h2>
+                <p>This is a brief introduction about myself.</p>
+            </section>
+            <section>
+                <h2>Projects</h2>
+                <ul>
+                    <li>Project 1</li>
+                    <li>Project 2</li>
+                </ul>
+            </section>
+            <section>
+                <h2>Additional Information</h2>
+                <h3>My Journey</h3>
+                <p>I started my journey in web development with a passion for creating interactive and user-friendly websites.</p>
+                <h3>Skills</h3>
+                <p>Over the years, I have developed skills in HTML, CSS, JavaScript, and other web technologies.</p>
+                <h3>Goals</h3>
+                <p>My goal is to become a full-stack developer and contribute to impactful projects.</p>
+                <h3>Hobbies</h3>
+                <p>In my free time, I enjoy coding, reading tech blogs, and exploring new tools and frameworks.</p>
+            </section>
+            <section>
+                <h2>Clickable Image</h2>
+                <a href="https://www.alxafrica.com/" target="_blank">
+                    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" style="width:200px;">
+                </a>
+            </section>
+        </article>
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
     </main>
     <footer>
-        <p>&copy; 2025 My First Portfolio</p>
+        <p>Made by Pedro - <a href="https://examplewebsite.com" target="_blank">here</a></p>
     </footer>
 </body>
 </html>
