--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -6,30 +6,37 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My First Portfolio</h1>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
     </header>
-    <a href="index.html">Home</a>
     <main>
-        <section>
-            <h2>About Me</h2>
-            <p>This is a brief introduction about myself.</p>
-        </section>
-        <blockquote class="twitter-tweet">
-  <p lang="en" dir="ltr">Just setting up my twttr</p>&mdash; jack (@jack) 
-  <a href="https://twitter.com/jack/status/20">March 21, 2006</a>
-</blockquote> 
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-        <section>
-            <h2>Projects</h2>
-            <ul>
-                <li>Project 1</li>
-                <li>Project 2</li>
-            </ul>
-        </section>
+        <article>
+            <h1>Welcome to My First Portfolio</h1>
+            <section>
+                <h2>About Me</h2>
+                <p>This is a brief introduction about myself.</p>
+            </section>
+            <blockquote class="twitter-tweet">
+                <p lang="en" dir="ltr">Just setting up my twttr</p>&mdash; jack (@jack) 
+                <a href="https://twitter.com/jack/status/20">March 21, 2006</a>
+            </blockquote> 
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <section>
+                <h2>Projects</h2>
+                <ul>
+                    <li>Project 1</li>
+                    <li>Project 2</li>
+                </ul>
+            </section>
+        </article>
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
     </main>
     <footer>
-        <p>&copy; 2025 My First Portfolio</p>
+        <p>Made by Pedro - <a href="https://example.com" target="_blank">here</a></p>
     </footer>
 </body>
 </html>
