--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -62,7 +62,7 @@
 
     <article>
         <h2>Featured</h2>
-        <p>Featured write-up or project highlight can go here — use this article for a blog post, case study, or spotlight.</p>
+        <p>Featured write-up or project highlight will go here</p>
     </article>
 
     <footer>
